[project]
name = "Risk"
version = "0.1.0"
description = "Risk Dagster Project"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pandas",
    "pyodbc",
    "paramiko",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "Risk.definitions"
code_location_name = "risk-pipeline"
